--- a/vignettes/BlackSheep_Example.Rmd
+++ b/vignettes/BlackSheep_Example.Rmd
@@ -1,10 +1,15 @@
 ---
-title: "BlackSheep_Example"
+title: "blackSheepR_Example"
 author: "MacIntosh Cornwell"
-date: "7/24/2019"
+date: "`r format(Sys.Date(), '%m/%d/%Y')`"
 output: html_document
+abstract: >
+    BlackSheep is used to perform extreme value analysis in the context of 
+    differential comparison between two populations. The basic mechanism is to 
+    test the proportions of outliers between the two populations, and assess for
+    statistical difference between the proportions of outliers.
 vignette: >
-    %\VignetteIndexEntry{[your index entry]}
+    %\VignetteIndexEntry{Outlier Analysis using blackSheepR}
     %\VignetteEngine{knitr::rmarkdown}
     %\VignetteEncoding{UTF-8}
 ---
@@ -13,27 +18,328 @@ vignette: >
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Introduction
+Outlier analysis is a well established method for exploring extreme values in
+the context of the rest of the population. In biological contexts, exploring the
+shift in proportion of these outliers can elucidate differences between 
+subpopulations, suggesting potential differential characteristics that can be 
+further explored.
+BlackSheep is a project that was developed in an effort to refine this analysis 
+to a functional tool for outlier analysis in the context of biological data. 
+This data can take many forms: protein, phosphoprotein, RNA, CNA, etc. The input
+for Blacksheep is count data of some form, and annotation data indicative of the
+populations for comparison.
+This vignette will run through a few standard use-cases, illustrating the 
+functionality of BlackSheep and hopefully answering questions and showing its 
+usefulness in biological exploration.
 
-This is an R Markdown document. Markdown is a simple formatting syntax for 
-authoring HTML, PDF, and MS Word documents. For more details on using R Markdown
-see <http://rmarkdown.rstudio.com>.
+## Installation:
+Installation is similar to all Bioconductor packages. Start R and run the 
+following lines to install:
+```{r install package, eval=FALSE}
+if (!requireNamespace("BiocManager", quietly = TRUE))
+    install.packages("BiocManager")
 
-When you click the **Knit** button a document will be generated that includes 
-both content as well as the output of any embedded R code chunks within the 
-document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+BiocManager::install("blackSheepR")
+```
+Loading the library is done by using the `library` call
+```{r library call}
+library(blackSheepR)
 ```
 
-## Including Plots
+## Input Data
+##### 1 - Count data
+Count data should be a table of counts with samples along the x-axis, and 
+features along the y-axis, with the labels being rownames and colnames.
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r countdata example, echo=FALSE}
+library(blackSheepR)
+data("sample_values")
+sample_values[1:5,1:5]
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent 
-printing of the R code that generated the plot.
+##### 2 - Annotation data
+The Annotation data should be a table with the same samples included in your 
+count data, listed along the y-axis. Each column will then be a comparison to 
+perform, with the values of the column being some form of binary system 
+indicating the samples belonging to each sub group.
+NOTE - that these should be strings. It's more informative if your columns 
+actually contain useful information such as "high"/"low", "mutant"/"WT", etc.
+```{r annotation example, echo=FALSE}
+data("sample_annotations")
+sample_annotations[1:5,1:5]
+```
+
+
+# Example Workflow - RNA
+In the following section - we will go through an example of using outlier 
+analysis using RNA data. The inputted data is being supplied from 
+[Github](https://github.com/ruggleslab/blacksheep_supp/tree/master) and is from 
+breast cancer data from TCGA and CPTAC.  
+
+#### Read in Data
+Read in the RNA and Annotation table, selecting the last 5 columns of the 
+annotation data to be used as comparison columns. We will also define a variable
+`outfilepath` which is used in a number of functions as a location to save data 
+out to
+```{r read in data - rna, echo = FALSE}
+annotationfile = paste0("/Users/tosh/Desktop/Ruggles_Lab/projects/",
+                        "outlier-tool/data/brca/annotations_common_samples.csv")
+annotationtable = read.table(annotationfile, header = TRUE, row.names = 1, 
+                na.strings = c("", " ", "NA"), sep = ",", check.names = FALSE)
+comptable = annotationtable[,(ncol(annotationtable)-4):ncol(annotationtable)]
+colnames(comptable) = c("PIK3CA_helical_mutant", "PIK3CA_kinase_mutant", 
+                        "TP53_Nonsense", "TP53_Missense_all", 
+                        "TP53_Missense_DNABD")
+
+rnacountfile = paste0("/Users/tosh/Desktop/Ruggles_Lab/projects/outlier-tool/",
+                      "data/brca/rna_common_samples_data.csv")
+rnatable = read.table(rnacountfile, header = TRUE, row.names = 1, sep = ",", 
+                      quote = "", check.names = FALSE)
+
+outfilepath = paste0("/Users/tosh/Desktop/Ruggles_Lab/projects/outlier-tool/",
+                     "output_VIGNETTE/")
+dir.create(outfilepath, recursive = TRUE, showWarnings = FALSE)
+
+comptable[1:5,1:5]
+dim(comptable)
+rnatable[1:5,1:5]
+dim(rnatable)
+print("Testing for existance of outfilepath; <dir.exists(outfilepath)>")
+dir.exists(outfilepath)
+
+```
+
+#### Create groupings
+Create the subgroups based on your metadata. Note that the 
+`comparison_groupings` function creates groups by going through the comparison 
+columns, and creating the first subgroup for all of the comparisons, and then 
+creates the second subgroup for all of the comparisons. The order depends on 
+the first subcategory encounted moving down the column. This order will matter
+later on when you look at comparisons, but this information will be contained 
+in the ouput table to avoid confusion, more on this later.
+```{r groupings - rna}
+groupings = comparison_groupings(comptable)
+## Print out the first 6 samples in each of our first 5 groupings
+lapply(groupings, head)[1:5]
+
+```
+
+#### Make Outlier table
+The next function `make_outlier_table` will take in the countdata and output a 
+table that has been converted to show outliers. A value of 0 means that it was 
+not an outlier, 1 means it was an outlier in the positive direction, and if the 
+parameter is set to analyze negative outliers, then -1 means an outlier in the 
+negative direction.
+
+The output from this function is a list of objects, that depends on the input 
+and the specified parameters. For RNA, we will leave the `aggregate_features` 
+parameter `FALSE` (which is its default) and NOT analyze the negative outliers
+
+```{r make outlier table - rna}
+## Perform the function
+reftable_function_out = make_outlier_table(rnatable)
+## See the names of the outputted objects
+names(reftable_function_out)
+## Assign them to individual variables
+outliertab = reftable_function_out$outliertab
+upperboundtab = reftable_function_out$upperboundtab
+sampmedtab = reftable_function_out$sampmedtab
+
+## Note we will only use the outlier table - which looks like this now
+outliertab[1:5,1:5]
+
+```
+
+#### Tabulate Outliers
+For each of our groups, run through the outlier table and count up the total 
+number of outliers and nonoutliers
+```{r groupingtablist - rna, eval=FALSE}
+grouptablist = count_outliers(groupings, outliertab)
+lapply(grouptablist, head)[1:5]
+```
+
+#### Run Outlier Analysis
+With the tabulated tables, run the outlier analysis to look for enrichment of 
+outliers between groups. NOTE that this function has a functionality built in 
+to write out tables to the external file, we will not use this parameter now, 
+but it can be set by turning the to parameter `write_out_tables = TRUE`
+```{r outlier analysis - rna, eval=FALSE}
+outlier_analysis_out = outlier_analysis(grouptablist)
+names(outlier_analysis_out)
+lapply(outlier_analysis_out, head)[1:5]
+```
+
+#### Plot Results using Heatmap Generating Function
+After you have your results, its useful to have a snapshot of your results in a 
+figure. blackSheepR includes a utility function to output a heatmap with custom 
+annotations and data. Use the plotting function with the original annotation 
+data, and populate the heatmap with whatever information you want to represent. 
+The outlier_analysis object is used to select the differential genes.
+NOTE that you can write out the plot directly in the function using the given 
+parameter `write_out_plot` or the saved object from the function is a heatmap, 
+so you can open your own pdf and print out using the commented out code below.
+```{r heatmap plotting - rna, eval=FALSE}
+hm1 = outlier_heatmap(outlier_analysis_out = outlier_analysis_out, 
+                      counttab = rnatable, metatable = annotationtable, 
+                      fdrcutoffvalue = 0.1)
+hm1
+
+## To output heatmap to pdf outside of the function
+#pdf(paste0(outfilepath, "test_hm1.pdf"))
+#hm1
+#junk<-dev.off()
+```
+
+
+
+
+
+
+# Example Workflow - Phosphoprotein
+In the following section - we will go through an example of using outlier 
+analysis using RNA data. The inputted data is being supplied from 
+[Github](https://github.com/ruggleslab/blacksheep_supp/tree/master) and is from 
+breast cancer data from TCGA and CPTAC.  
+
+#### Read in Data
+Read in the RNA and Annotation table, selecting the last 5 columns of the 
+annotation data to be used as comparison columns. We will also define a variable
+`outfilepath` which is used in a number of functions as a location to save data 
+out to
+```{r read in data - phospho, echo = FALSE}
+annotationfile = paste0("/Users/tosh/Desktop/Ruggles_Lab/projects/",
+                        "outlier-tool/data/brca/annotations_common_samples.csv")
+annotationtable = read.table(annotationfile, header = TRUE, row.names = 1, 
+                na.strings = c("", " ", "NA"), sep = ",", check.names = FALSE)
+comptable = annotationtable[,(ncol(annotationtable)-4):ncol(annotationtable)]
+colnames(comptable) = c("PIK3CA_helical_mutant", "PIK3CA_kinase_mutant", 
+                        "TP53_Nonsense", "TP53_Missense_all", 
+                        "TP53_Missense_DNABD")
+
+phosphocountfile = paste0("/Users/tosh/Desktop/Ruggles_Lab/projects/",
+                    "outlier-tool/data/brca/phospho_common_samples_data.csv")
+phosphotable = read.table(phosphocountfile, header = TRUE, row.names = 1, 
+                        sep = ",", quote = "", check.names = FALSE)
+
+outfilepath = paste0("/Users/tosh/Desktop/Ruggles_Lab/projects/outlier-tool/",
+                     "output_VIGNETTE/")
+dir.create(outfilepath, recursive = TRUE, showWarnings = FALSE)
+
+comptable[1:5,1:5]
+dim(comptable)
+phosphotable[1:5,1:5]
+dim(rnatable)
+print("Testing for existance of outfilepath; <dir.exists(outfilepath)>")
+dir.exists(outfilepath)
+
+```
+
+#### Create groupings
+Create the subgroups based on your metadata. Note that the 
+`comparison_groupings` function creates groups by going through the comparison 
+columns, and creating the first subgroup for all of the comparisons, and then 
+creates the second subgroup for all of the comparisons. The order depends on 
+the first subcategory encounted moving down the column. This order will matter
+later on when you look at comparisons, but this information will be contained 
+in the ouput table to avoid confusion, more on this later.
+```{r groupings - phospho}
+groupings = comparison_groupings(comptable)
+## Print out the first 6 samples in each of our first 5 groupings
+lapply(groupings, head)[1:5]
+
+```
+
+#### Make Outlier table
+The next function `make_outlier_table` will take in the countdata and output a 
+table that has been converted to show outliers. A value of 0 means that it was 
+not an outlier, 1 means it was an outlier in the positive direction, and if the 
+parameter is set to analyze negative outliers, then -1 means an outlier in the 
+negative direction.
+
+The output from this function is a list of objects, that depends on the input 
+and the specified parameters. For Phosphoprotein - you can have data that has 
+several phospho sites per protein. As a part of this analysis, one option is to 
+aggregate data on that protein - and collapse the outlier information into a 
+single feature. Turning `aggregate_features = TRUE` will perform this function, 
+and the `feature_delineator` is the character string to collapse on
+ex) Feature1-1 and Feature1-2-1 with the delineator of "-" will collapse onto 
+Feature 1
+
+The output with `aggregate_features = TRUE` will contain two additional 
+objects. It will output the normal outliertable, and boundary tables, and also 
+the "aggposoutlierstab" and "aggposfractiontab"
+The "aggposoutlierstab" will be the collapsed table, summing up the number of 
+outliers per feature
+The "aggfractiontab" returns the % outliers per feature per sample, given 
+available information
+ex) 1,0,0 >> 1/3
+ex) 1,0,NA >> 1/2
+
+```{r make outlier table - phospho}
+## Perform the function
+reftable_function_out = make_outlier_table(phosphotable)
+## See the names of the outputted objects
+names(reftable_function_out)
+## Assign them to individual variables
+outliertab = reftable_function_out$outliertab
+upperboundtab = reftable_function_out$upperboundtab
+sampmedtab = reftable_function_out$sampmedtab
+aggposoutlierstab = reftable_function_out$aggposoutlierstab
+aggposfractiontab = reftable_function_out$aggposfractiontab
+
+## Note we will only use the outlier table - which looks like this now
+outliertab[1:5,1:5]
+aggposoutlierstab[1:5,1:5]
+aggposfractiontab[1:5,1:5]
+
+```
+
+#### Tabulate Outliers
+For each of our groups, run through the outlier table and count up the total 
+number of outliers and nonoutliers. For phospho (And this example) we are going 
+to use the AGGREGATED phospho table
+```{r groupingtablist - phospho, eval=FALSE}
+grouptablist = count_outliers(groupings, aggposoutlierstab)
+lapply(grouptablist, head)[1:5]
+```
+
+#### Run Outlier Analysis
+With the tabulated tables, run the outlier analysis to look for enrichment of 
+outliers between groups. NOTE that this function has a functionality built in 
+to write out tables to the external file, we will not use this parameter now, 
+but it can be set by turning the to parameter `write_out_tables = TRUE`
+```{r outlier analysis - phospho, eval=FALSE}
+outlier_analysis_out = outlier_analysis(grouptablist)
+names(outlier_analysis_out)
+lapply(outlier_analysis_out, head)[1:5]
+```
+
+#### Plot Results using Heatmap Generating Function
+After you have your results, its useful to have a snapshot of your results in a 
+figure. blackSheepR includes a utility function to output a heatmap with custom 
+annotations and data. Use the plotting function with the original annotation 
+data, and populate the heatmap with whatever information you want to represent. 
+In this case, we are going to populate the table with the fractions of outliers 
+per feature. 
+The outlier_analysis object is used to select the differential genes.
+NOTE that you can write out the plot directly in the function using the given 
+parameter `write_out_plot` or the saved object from the function is a heatmap, 
+so you can open your own pdf and print out using the commented out code below.
+```{r heatmap plotting - phospho, eval=FALSE}
+hm1 = outlier_heatmap(outlier_analysis_out = outlier_analysis_out, 
+                counttab = aggposfractiontab, metatable = annotationtable, 
+                fdrcutoffvalue = 0.1)
+hm1
+
+## To output heatmap to pdf outside of the function
+#pdf(paste0(outfilepath, "test_hm1.pdf"))
+#hm1
+#junk<-dev.off()
+```
+
+
+
+
+
+
